# writing

./: .gitignore  TODO  amber.mkd  beagledaq.mkd  default.nix  flake.nix  ghc-llvm-arm.mkd  gromacs.mkd  hakyll.hs  index.html  index.mkd  past-research.mkd  publications.mkd  push.sh  research-agenda.mkd  writing.cabal
css/: default.css
generator/: hakyll.hs  writing.cabal
media/: ben@well-typed.com.asc  fm-decoder.grc  linux-4.4-rc2.odroidxu4.config
posts/: 2011-10-16-adventures_in_devicetree_land.mkd  2011-10-16-amber.mkd  2011-10-16-beagledaq.mkd  2011-10-16-gromacs.mkd  2011-10-17-crosscompiling_llvm.mkd  2012-01-20-pcb-etching.mkd  2012-01-27-ghc-llvm-arm.mkd  2012-03-01-linaro-kernel.mkd  2012-03-28-jtag-over-buspirate.mkd  2012-06-25-getting-started-with-mchck.mkd  2012-07-10-endnote-to-bibtex.mkd  2012-07-16-beginnings-of-the-blotbot.mkd  2012-07-16-beginnings-of-the-blotbot.mkd.ignore  2012-08-30-testing-mesa.mkd  2013-01-04-ghc-arm-update.mkd  2013-03-23-intro-to-edev.mkd  2013-06-15-hackrf.mkd  2013-06-27-lpc43xx-and-openocd.mkd  2013-07-24-flashing-busblaster-cpld-with-openocd.mkd  2013-10-13-debugging-stream-fusion.mkd  2013-11-17-running-modern-kernel-on-pandaboard.mkd  2014-03-06-compiling-ghc-7.8-on-arm.mkd  2014-03-19-help-an-invalid-closure.mkd  2014-04-18-setup-picoharp.mkd  2014-04-28-upgrading-bios-on-e7440.mkd  2014-08-23-swd-with-busblaster-and-openocd.mkd  2014-09-12-bringing-up-debian-on-bbb.mkd  2014-09-18-unbricking-a-secured-k20.mkd  2014-10-31-semihosting.mkd  2014-11-21-bayes.mkd  2014-11-28-llvm-test-results.mkd  2015-07-09-nftables.mkd  (+37 more)
(+9 files in other folders)
