name:                writing
version:             0.1.0.0
synopsis:            Ben's blog
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
copyright:           (c) 2017 Ben Gamari
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable writing
  main-is:             hakyll.hs
  build-depends:       base >=4.9 && <4.13,
                       containers,
                       pandoc >= 2.0,
                       pandoc-citeproc,
                       blaze-html,
                       hakyll >= 4.12
  default-language:    Haskell2010
